--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
     <dependencies>
         <dependency>
             <groupId>com.ge.research.sadl</groupId>
+            <artifactId>com.ge.research.sadl.jena-wrapper-for-sadl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ge.research.sadl</groupId>
             <artifactId>reasoner-api</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -91,6 +96,28 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>clean-repository</id>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                            <failOnError>false</failOnError>
+                            <filesets>
+                                <fileset>
+                                    <directory>repository</directory>
+                                </fileset>
+                            </filesets>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <configuration>
                     <copyPom>true</copyPom>
@@ -128,9 +155,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <configuration>
+                    <id>sadl-snapshot-repository</id>
                     <url>file://${project.basedir}/repository</url>
                 </configuration>
                 <executions>
+                    <execution>
+                        <id>deploy-com.ge.research.sadl.jena-wrapper-for-sadl</id>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <phase>install</phase>
+                        <configuration>
+                            <file>${project.build.directory}/dependency/com.ge.research.sadl.jena-wrapper-for-sadl-${project.version}.jar</file>
+                            <pomFile>${project.build.directory}/dependency/com.ge.research.sadl.jena-wrapper-for-sadl-${project.version}.pom</pomFile>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>deploy-reasoner-api</id>
                         <goals>
